--- a/index.html
+++ b/index.html
@@ -1,11 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  
+  <title>Brian Peyton's Website</title>
+
+  <head>
+    <link rel="stylesheet" href="style.css">
+    <script src="javascript.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+
+  </head>
+
+  <body>
+    <header>
+        <span class="name"Brian Peyton></span>
+        <nav class="links">
+            <a class="active" href="/">HOME</a>
+            <a href="/about.html">ANOUT</a>
+            <a href="/portfolio.html">PORTFOLIO</a>
+        </nav>
+    </header>
     
 </body>
 </html>
