--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <span class="name"Brian Peyton></span>
         <nav class="links">
             <a class="active" href="/">HOME</a>
-            <a href="/about.html">ANOUT</a>
+            <a href="/about.html">ABOUT</a>
             <a href="/portfolio.html">PORTFOLIO</a>
         </nav>
     </header>
