aligned for better nesting.

--- a/index.html
+++ b/index.html
@@ -13,13 +13,26 @@
 
   <body>
     <header>
-        <span class="name"Brian Peyton></span>
+      <span class="name"Brian Peyton></span>
         <nav class="links">
-            <a class="active" href="/">HOME</a>
-            <a href="/about.html">ABOUT</a>
-            <a href="/portfolio.html">PORTFOLIO</a>
+          <a class="active" href="/">HOME</a>
+          <a href="/about.html">ABOUT</a>
+          <a href="/portfolio.html">PORTFOLIO</a>
         </nav>
     </header>
+
+    <main>
+      <h1>Developer, Driver, Doer</h1>
+
+      <h2>Interested in improving myself and the world around me.</h2>
+
+      <h3 class="quote">"It's the repetition of affirmations that leads to belief.<br>
+        And once that belief becomes a deep conviction, things <i>begin</i> to happen."<br>
+        <br>
+        -Muhammad Ali
+      </h3>
+
+    </main>
     
 </body>
 </html>
