added fun facts about me.

--- a/about.html
+++ b/about.html
@@ -1,10 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+  <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Brian Peyton's Website</title>
 </head>
+
+<header>
+  <span class="name">Brian Peyton</span>
+  <nav class="links">
+    <a href="/index.html">HOME</a>
+    <a class="active" href="/">ABOUT</a>
+    <a href="/portfolio.html">PORTFOLIO</a>
+  </nav>
+</header>
+
+<main>
+  <h1>Hobbies</h1>
+  <h2>I enjoy traveling, exercise, and hanging out with family and friends.</h2>
+  <img src="" alt="me doing stuff">
+  <p>I've driven across America 12 times, 11 of them solo.  I've covered ground from Key West, FL to Toronto, Canada. <br>
+    <br>
+  I've made it from San Diego to Seattle by car as well.  I've made tracks from Homer to Fairbanks, AK. <br>
+    <br>
+  I am comfortable driving "European Style," where the steering wheel and flow of traffic are on opposite sides. <br>
+    <br>
+  I've put over 100,000 miles on my car in less than 2 years, many of them while driving for Uber.  
+</p>
+</main>
 <body>
     
 </body>
