--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <body>
     <header>
-      <span class="name"Brian Peyton></span>
+      <span class="name"></span>Brian Peyton></span>
         <nav class="links">
           <a class="active" href="/">HOME</a>
           <a href="/about.html">ABOUT</a>
