--- a/about.html
+++ b/about.html
@@ -18,12 +18,12 @@
 </header>
 
 <main>
-  <h1>Hobbies</h1>
+  <h1>Fun Facts About Me</h1>
   <h2>I enjoy traveling, exercise, and hanging out with family and friends.</h2>
   <img src="" alt="me doing stuff">
   <p>I've driven across America 12 times, 11 of them solo.  I've covered ground from Key West, FL to Toronto, Canada. <br>
     <br>
-  I've made it from San Diego to Seattle by car as well.  I've made tracks from Homer to Fairbanks, AK. <br>
+  I've made it from San Diego to Seattle by car as well.  I've also made tracks from Homer to Fairbanks, AK. <br>
     <br>
   I am comfortable driving "European Style," where the steering wheel and flow of traffic are on opposite sides. <br>
     <br>
