added title, nav and lorem to portfolio.

--- a/portfolio.html
+++ b/portfolio.html
@@ -1,11 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <link rel="stylesheet" href="style.css">
+  <script src="javascript.js"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+  <title>Brian Peyton's Website</title>
 </head>
+  
 <body>
+  <header>
+    <span class="name"></span>Brian Peyton></span>
+        <nav class="links">
+          <a href="/index.html">HOME</a>
+          <a href="/about.html">ABOUT</a>
+          <a class="active" href="/">PORTFOLIO</a>
+        </nav>
+  </header>
+  <main>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>
+        Ut perspiciatis porro, rerum reprehenderit cupiditate sunt <br>
+        modi dolorem iste repudiandae molestias neque explicabo esse <br>
+        praesentium et corporis. Distinctio voluptas vitae sequi?
+    </p>
+  </main>
     
 </body>
 </html>
